FEAT: event registration